# Vermin

./: .gitignore  .vimrc  CMakeLists.txt  README.md  vermin.vim  vimrc
Docs/: Design.txt  TaskList.txt
Engine/: AnimatedEntity.cpp  AnimatedEntity.h  AssetManager.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Camera.cpp  Camera.h  Colours.h  Configurations.h  Entity.cpp  Entity.h  FolderLocations.h  GLShader.cpp  GLShader.h  GUIHelpers.h  Grid.h  LoggingMacros.h  LoggingManager.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  PE_GL.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Terrain.cpp  Terrain.h  TestScene.cpp  TestScene.h  TestSceneUtils.cpp  Texture.h  Window.cpp  Window.h  library.cpp  library.h
Engine/EngineDeps/Includes/assimp/: DefaultIOSystem.h  Exporter.hpp  IOSystem.hpp  LogStream.hpp  Logger.hpp  NullLogger.hpp  camera.h  cexport.h  cfileio.h  cimport.h  defs.h  importerdesc.h  light.h  material.h  matrix3x3.h  matrix4x4.h  mesh.h  quaternion.h  quaternion.inl  texture.h  vector2.inl  vector3.h  vector3.inl  version.h
Engine/EngineDeps/Includes/assimp/Compiler/: poppack1.h  pushpack1.h
Engine/EngineDeps/Includes/assimp/port/AndroidJNI/: AndroidJNIIOSystem.h
Engine/EngineDeps/Includes/glm/: common.hpp  ext.hpp  fwd.hpp  mat3x3.hpp  mat3x4.hpp  mat4x2.hpp  mat4x4.hpp  matrix.hpp  packing.hpp  trigonometric.hpp
Engine/EngineDeps/Includes/glm/detail/: _swizzle.hpp  _swizzle_func.hpp  func_common.inl  func_geometric_simd.inl  func_matrix.inl  func_matrix_simd.inl  func_packing.inl  func_packing_simd.inl  func_vector_relational.inl  glm.cpp  setup.hpp  type_float.hpp  type_gentype.hpp  type_gentype.inl  type_half.hpp  type_int.hpp  type_mat.hpp  type_mat2x2.hpp  type_mat2x2.inl  type_mat2x3.hpp  type_mat2x4.hpp  type_mat3x3.inl  type_mat4x2.inl  type_mat4x3.inl  type_mat4x4.hpp  type_vec.hpp  type_vec1.inl  type_vec2.hpp  type_vec3.hpp  type_vec3.inl  type_vec4.hpp  type_vec4.inl  type_vec4_simd.inl
Engine/EngineDeps/Includes/glm/ext/: vector_relational.hpp
Engine/EngineDeps/Includes/glm/gtc/: bitfield.inl  color_space.inl  constants.hpp  epsilon.inl  matrix_access.hpp  matrix_transform.inl  noise.hpp  packing.inl  quaternion.hpp  quaternion_simd.inl  random.hpp  reciprocal.hpp  reciprocal.inl  round.hpp  round.inl  type_precision.hpp  ulp.inl
Engine/EngineDeps/Includes/glm/gtx/: associated_min_max.hpp  associated_min_max.inl  closest_point.hpp  closest_point.inl  color_encoding.hpp  color_encoding.inl  color_space.hpp  color_space.inl  color_space_YCoCg.hpp  color_space_YCoCg.inl  common.hpp  common.inl  compatibility.hpp  compatibility.inl  component_wise.hpp  component_wise.inl  dual_quaternion.hpp  easing.hpp  extend.hpp  extended_min_max.inl  exterior_product.hpp  exterior_product.inl  fast_exponential.inl  fast_square_root.hpp  fast_square_root.inl  fast_trigonometry.inl  float_notmalize.inl  functions.hpp  gradient_paint.inl  handed_coordinate_space.hpp  integer.hpp  integer.inl  io.inl  log_base.hpp  matrix_decompose.hpp  matrix_factorisation.hpp  matrix_interpolation.hpp  matrix_interpolation.inl  matrix_major_storage.hpp  matrix_major_storage.inl  (+30 more)
Engine/EngineDeps/Includes/glm/simd/: common.h  geometric.h  platform.h
Engine/EngineDeps/Includes/stb/: stb_image.h
Engine/Includes/assimp/: DefaultIOStream.h  IOStream.hpp  Importer.hpp  ProgressHandler.hpp  anim.h  config.h  material.inl  matrix3x3.inl  metadata.h  postprocess.h
Engine/Includes/glm/: CMakeLists.txt  exponential.hpp  geometric.hpp  integer.hpp  mat2x2.hpp  mat2x3.hpp  mat2x4.hpp  mat3x2.hpp  mat4x3.hpp  vector_relational.hpp
Engine/Includes/glm/detail/: _noise.hpp  _vectorize.hpp  compute_vector_relational.hpp  dummy.cpp  func_common_simd.inl  func_exponential.inl  func_exponential_simd.inl  func_geometric.inl  func_integer.inl  func_integer_simd.inl  func_trigonometric.inl  func_vector_relational_simd.inl  qualifier.hpp  type_half.inl  type_mat2x3.inl  type_mat2x4.inl  type_mat3x2.hpp  type_mat3x2.inl  type_mat3x3.hpp  type_mat3x4.hpp  type_mat3x4.inl  type_mat4x2.hpp  type_mat4x3.hpp  type_mat4x4.inl  type_vec2.inl
Engine/Includes/glm/ext/: vec1.hpp  vector_relational.inl
Engine/Includes/glm/gtc/: bitfield.hpp  color_space.hpp  constants.inl  epsilon.hpp  integer.hpp  integer.inl  matrix_access.inl  matrix_integer.hpp  matrix_inverse.hpp  matrix_inverse.inl  matrix_transform.hpp  matrix_transform.inl  noise.inl  packing.hpp  quaternion.inl  random.inl  type_aligned.hpp  type_ptr.hpp  type_ptr.inl  ulp.hpp
Engine/Includes/glm/gtx/: bit.hpp  bit.inl  dual_quaternion.inl  easing.inl  euler_angles.hpp  euler_angles.inl  extend.inl  extended_min_max.hpp  fast_exponential.hpp  fast_trigonometry.hpp  functions.inl  gradient_paint.hpp  handed_coordinate_space.inl  hash.hpp  hash.inl  intersect.hpp  intersect.inl  io.hpp  log_base.inl  matrix_cross_product.hpp  matrix_cross_product.inl  matrix_decompose.inl  matrix_factorisation.inl  matrix_operation.hpp  matrix_operation.inl  matrix_query.hpp  matrix_query.inl  norm.hpp  normal.hpp  normalize_dot.hpp  normalize_dot.inl  optimum_pow.hpp  orthonormalize.hpp  orthonormalize.inl  polar_coordinates.hpp  projection.hpp  quaternion.hpp  quaternion.inl  spline.inl  string_cast.hpp  (+10 more)
Engine/Includes/glm/simd/: exponential.h  matrix.h
Engine/src/: AnimatedEntity.cpp  AnimatedEntity.h  AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  Configurations.h  Entity.cpp  Entity.h  FolderLocations.h  GLShader.cpp  GLShader.h  GUIHelpers.h  Grid.cpp  LoggingManager.h  Mesh.cpp  PEHelpers.cpp  PEHelpers.h  Ray.h  Scene.cpp  Scene.h  Terrain.cpp  Terrain.h  TestScene.cpp  TestScene.h  TestSceneUtils.cpp  Texture.cpp  Window.cpp  Window.h  library.cpp  library.h
Game/: Barracks.cpp  Barracks.h  Building.cpp  Building.h  Catapult.cpp  Catapult.h  Game.cpp  Game.h  GamePlayManager.cpp  GamePlayManager.h  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  Player.cpp  Player.h  ResourceObject.h  SiegeFactory.cpp  SiegeFactory.h  Stone.cpp  Stone.h  Tree.cpp  Tree.h  Unit.cpp  Unit.h  Villager.cpp  Villager.h  Warrior.cpp  Warrior.h  main.cpp  (+1 more)
(+16 files in other folders)
